<resources>
    <string name="app_name">拐卖受害人识别</string>
    <string name="app_version">Version 1.0</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="addnew_header">添加新问卷 </string>
    <string name="addnew_l11">照片 </string>
    <string name="addnew_l1">基本信息 </string>
    <string name="addnew_l2">性别 </string>
    <string name="addnew_l2_1">女</string>
    <string name="addnew_l2_2">男</string>
    <string name="addnew_l3">名</string>
    <string name="addnew_l4">城市</string>
    <string name="addnew_l5">问询地点</string>
    <string name="addnew_l6">创建问卷</string>
    <string name="addnew_lastname">姓名</string>
    <string name="addnew_firstname">名</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_ok">Settings</string>
    <string name="action_search">Search</string>
    <string name="page3_button1">全屏</string>
    <string name="page3_button2">分享</string>
    <string name="page3_button3">播放</string>
    <string name="page3_button4">下一步</string>
    <string name="page4_l1">Instead of replacing formal interrogation with official interpretation/translation, the purpose of the following questions is for police in interview to enable respondents/potential VoTs to talk in their own language about the situation they are in, and what assistance they need, in order to preliminarily identify VoTs and timely help those in need.</string>
    <string name="page4_l2">下面这些用于受害人翻译辅助软件的问题不能替代正式调查或者正式的翻译， 其目的是在翻译到来、正式调查开展之前，为识别外籍救助对象的语言、处境和需求提供基本问题和信息，以初步确认拐卖受害人，为救助对象提供及时有针对性的帮助。</string>
    <string name="page4_l3">Informing interviewee 告知</string>
    <string name="page4_l4">Please do not be afraid, we are not here to interrogate you, but to know some information related to your health and safety, in order to better help you. </string>
    <string name="page4_l5">You will hear several questions, you only need to answer "yes" or "no",</string>
    <string name="page4_l6">After hearing the question, please nod to answer "yes" or shake head to answer “no”.</string>
    <string name="page4_l7">请不要害怕，我们不是在这里审问你，而是需要了解一些和你的健康和安全有关的事情，以便更好的帮助你。</string>
    <string name="page4_l8">你会听到几组问题，你只需要回答“是”或“不是”</string>
    <string name="page4_l9">听到问题后，请点头回答“是”或者 请摇头回答“不是”。</string>
    <string name="people_gov_title">拐卖受害人识别指标</string>
    <string name="people_gov_content_1">说明： \n
        \n2015年12月15-16日在马来西亚吉隆坡，包括中国在内的湄公河次区域六国（COMMIT）与东盟成员国政府代表，召开识别人口贩运（即通常所说“人口拐卖”）受害人及相关剥削形式研讨会。\n
        \n经讨论，产出了以下供一线执法和服务工作者参考的共同识别指标，其中包括目测直观迹象和初步识别指标，可供一线官员和其他基层工作人员用来判断某种情形是否需要作为人口贩运案件或者相关剥削案件开展进一步调查。\n</string>
    <string name="people_gov_content_2"></string>
    <string name="people_gov_detail_title">民政部关于印发《生活无着的流浪乞讨人员救助管理机构工作规程》的通知</string>
    <string name="people_gov_detail_content_1">民政部   \n
2014年6月22日\n</string>
    <string name="people_gov_detail_content">各省、自治区、直辖市民政厅（局），各计划单列市民政局，新疆生产建设兵团民政局：\n
为进一步规范生活无着的流浪、乞讨人员救助管理工作，维护受助人员合法权益，根据有关政策法规，我部制定了《生活无着的流浪乞讨人员救助管理机构工作规程》。现印发给你们，请加强学习培训，认真贯彻执行。\n
附件：\n
1.求助登记表\n
2.不予救助通知书\n
3.自行离站声明书\n
4.在站服务及离站登记表\n
5.终止救助通知书\n
6.有关法律法规、政策文件规定</string>
    <string name="people_gov_detail_c_1">生活无着的流浪乞讨人员救助管理机构工作规程\n
第一章  总则</string>
    <string name="people_gov_detail_c_1_1">第一条  为规范生活无着的流浪、乞讨人员救助管理工作，维护受助人员合法权益，保障生活无着的流浪、乞讨人员救助管理机构（以下简称救助管理机构）工作秩序，根据《城市生活无着的流浪乞讨人员救助管理办法》、《社会救助暂行办法》等规定，制定本规程。\n\n
第二条  本规程所称的生活无着的流浪、乞讨人员是指离家在外、自身无力解决食宿、正在或即将处于流浪或乞讨状态的人员，包括生活无着的流浪人员和生活无着的乞讨人员（以下简称流浪乞讨人员）。\n\n
第三条  本规程所称的救助管理机构包括县级以上人民政府设立的救助管理站、未成年人救助保护中心等专门机构。救助管理机构应当为流浪乞讨人员提供临时性救助服务。</string>
    <string name="people_gov_detail_c_2_1">第一节  求助接待\n\n
第四条  救助管理机构实行24小时接待服务，工作人员应当言语文明，态度友善，并告知救助政策及入站须知。\n\n
第五条  救助管理机构应当开通救助热线，救助热线实行24小时服务，热线号码应当向社会公开并在当地114查询台登记。\n救助热线电话录音保存时间不少于3个月。\n\n
第六条  救助管理机构的引导标志应当醒目、容易识别，设置在人流量较大的交通要道、繁华地段。\n救助管理机构应当将机构名称牌匾等标志悬挂在楼院门外醒目位置。\n\n
第七条  救助管理机构应当对来站求助人员身体状况和精神状况进行初步检视。\n\n
第八条  求助人员为疑似精神障碍患者、疑似传染病人、危重病人或有明显外伤人员的，救助管理机构应当联系医疗急救机构或安排工作人员将其送医救治、诊断。\n\n
第九条  求助人员在醉酒状态中，对本人有危险或者对他人的人身、财产或者公共安全有威胁的，救助管理机构应当报警，由公安机关依法处置。\n\n
第十条  求助人员为疑似吸毒人员或疑似在逃人员的，救助管理机构应当报请公安机关处置。\n\n
第十一条  救助管理机构应当对公安机关护送来站的被拐卖受害人实施救助。\n\n
第二节  安检登记\n\n
第十二条  求助人员应当按照救助管理机构要求，接受安全检查。女性求助人员应当由女性工作人员检查。\n安全检查发现有异常的，求助人员应当出示随身物品或开包接受检查。\n\n
第十三条  动物或可能造成人员伤害或财产安全的物品不得被携带进入站内。\n对在安全检查中发现的易爆、腐蚀、管制刀具等危险物品，救助管理机构应当及时报请公安机关处置；对在安全检查中发现的锐（利）器、打火器具等物品，求助人员应当自行丢弃或交由救助管理机构代为保管。\n\n
第十四条  求助人员应当配合救助管理机构开展安全检查，并遵守物品管理规定。\n\n
第十五条  求助人员应当向救助管理机构说明求助原因和需求，出示本人身份证件；无法出示身份证件的，应当如实提供本人姓名、身份证件号、户籍地等基本信息。有条件的救助管理机构可以通过公安机关核实求助人员身份信息。
        \n\n
第十六条  求助人员因年老、年幼、残疾等原因不能提供个人信息的，救助管理机构应当先行救助。\n\n
第十七条  救助管理机构应当留存求助人员指纹和电子照片，将安全检查、证件材料、检视询问等情况录入全国救助管理信息系统，生成《求助登记表》（附件1）。
        \n\n
第十八条  求助人员有携带未成年人流浪乞讨行为，或疑似胁迫、诱骗、利用未成年人乞讨或者组织未成年人进行有害身心健康的表演等活动的，救助管理机构应当及时报请公安机关调查、甄别。\n\n

第十九条  求助人员为疑似境外人员的，救助管理机构应当及时报请公安机关确认求助人员身份。属于非法入境、居留的，应当将其交由公安机关处置。属于合法入境、居留的，应当及时向当地外办、港澳办或台办通报，并可受当地外办、港澳办或台办的委托提供临时服务。
        \n\n
第二十条  在安全检查登记中发现求助人员有以下情形之一的，救助管理机构应当向求助人员解释不予救助的原因，并出具《不予救助通知书》（附件2，一式两份）：
        \n\n
（一） 拒不配合安全检查；
        \n\n
（二） 拒不遵守物品管理规定；
        \n\n
（三） 自身有能力解决食宿；
        \n\n
（四） 索要现金，拒不接受其他救助方式；
        \n\n
（五） 拒不提供或拒不如实提供个人信息；
        \n\n
（六） 其他不符合救助条件的情形。</string>
    <string name="people_gov_detail_c_3_1">第一节  生活服务
\n\n
第二十一条  求助人员应当将随身携带的物品进行寄存，救助管理机构应当妥善保管。
\n\n
第二十二条  救助管理机构应当按照受助人员性别、年龄、身心状况安排分区居住、单人单床，并为受助人员发放必要的生活用品。
\n\n
女性受助人员应当安排女性工作人员管理。
\n\n
第二十三条  成年女性携带6周岁以下未成年人的，救助管理机构应当为其共同在成人区生活提供便利。
\n\n
第二十四条  救助管理机构应当对受助人员进行安全教育，告知其生活起居、注意事项及站内管理要求。
\n\n
第二十五条  救助管理机构应当及时清洗、消毒餐具、炊具，提供符合卫生要求的饮食并实行分餐制。对于未成年人、老年人、少数民族人员和患病人员，应当照顾其特殊饮食需求。
\n\n
第二十六条  救助管理机构应当对受助人员居室及活动区域经常清理、消毒，对受助人员床上用品每周至少清洗、消毒一次。受助人员离站后，应当对其床上用品及时更换、清洗、消毒。
\n\n
第二十七条  救助管理机构应当为生活不能自理的受助人员用餐、住宿、穿衣、入厕、洗浴等提供相应的生活照顾和便利条件。
\n\n
第二十八条  受助人员应当遵守救助管理机构各项内部管理规定，配合救助管理机构保持环境卫生和个人卫生，参加有益于身心健康的文体活动和教育辅导等活动。救助管理机构可以视情为受助人员提供心理辅导、行为矫治等服务。
\n\n
第二十九条  受助人员因年老、残疾等原因暂时无法查明家庭情况或暂时无法离站的，救助管理机构可以委托相关机构托养。办理机构托养服务手续，应当符合相关规定。
\n\n
第二节  寻亲服务
\n\n
第三十条  受助人员有疑似走失、被遗弃或被拐卖情形的，救助管理机构应当及时向公安机关报案。
\n\n
第三十一条  受助人员因年老、年幼、残疾等原因不能提供个人信息的，救助管理机构应当及时报请公安机关协助核查求助人员身份，并在其入站后24小时内以适当形式发布寻亲公告。
\n\n
第三十二条  救助管理机构应当充分利用现有工作信息和工作渠道，为前来寻亲人员提供便利和帮助。
\n\n
第三节  医疗服务
\n\n
第三十三条  救助管理机构应当做好卫生保健、防疫工作，配备体温计、血压计等基本设备。有条件的救助管理机构可以依法内设医务室或与专业医疗机构合作开展医疗服务。
\n\n
第三十四条  救助管理机构应当严格按照医嘱，对患病受助人员按时按量发放药品，做好服药情况记录。
\n\n
第三十五条  救助管理机构发现受助人员突发急病、精神异常或有疑似传染病的，应当及时送往医疗机构或联系医疗急救机构救治、诊断；对有疑似传染病的，还应当及时向疾病预防控制机构报告，建议采取必要的卫生处理措施；发现有疑似吸毒情形的，应当报请公安机关处置。
\n\n
第三十六条  由公安、城管等单位公务人员直接护送疑似精神障碍患者、危重病人或有明显外伤人员到医疗机构救治的，救助管理机构应当在接到通知后及时到医疗机构甄别和确认病人身份。经甄别符合生活无着的流浪、乞讨人员救助条件的，救助管理机构应当及时为其办理救助登记手续。
\n\n
第三十七条  因抢救生命垂危的受助人员等紧急情况，不能取得受助人员或者与其一同受助的近亲属意见，医疗机构征求救助管理机构意见的，救助管理机构应当建议医疗机构按照《中华人民共和国侵权责任法》规定处置。
\n\n
需要对受助人员施行手术、特殊检查或者特殊治疗时，受助人员可以表达意见的，应当由受助人员自行决定；受助人员不同意的，救助管理机构可以做好记录并妥善保存。
\n\n
在对受助未成年人实施医疗措施过程中，救助管理机构应当尊重医疗机构意见。
\n\n
第三十八条  受助人员属于诊断结论表明需要住院治疗的精神障碍患者的，由送诊的有关部门办理住院治疗手续。
\n\n
第三十九条  救助管理机构应当根据医疗机构出具的可以出院的证明材料为受助人员办理出院手续。受助人员无故拒不出院的，救助管理机构应当终止对其救助。
\n\n
第四十条  救助管理机构应当按照当地物价和卫生计生部门制定的医疗服务收费标准、国家基本药物目录与医疗机构核定受助人员医疗收费和用药范围。受助人员需要超范围用药或进行大型器械检查的，须经救助管理机构审查同意后方可实施。
\n\n
第四节  未成年人教育服务
\n\n
第四十一条  救助管理机构应当为受助未成年人提供关爱型服务和保护性措施，及时与受助未成年人沟通，了解其思想状况和遇困原因，经常组织受助未成年人参加有益于身心健康的文体活动、公益活动和社会实践活动，帮助受助未成年人树立正确的价值观、人生观。
\n\n
第四十二条  救助管理机构应当对受助未成年人开展心理咨询和需求评估。受助未成年人存在心理和行为偏差的，救助管理机构应当进行有针对性的心理辅导和行为矫治。对于重复流浪或经评估发现不宜返回家庭的受助未成年人，救助管理机构可以延长救助期限。
\n\n
第四十三条  流出地救助管理机构应当对受助未成年人的家庭监护情况进行调查评估：对确无监护能力的，由救助管理机构协助监护人及时委托其他人员代为监护；对拒不履行监护责任、经反复教育不改的，由救助管理机构向人民法院提出申请撤销其监护人资格，依法另行指定监护人。
\n\n
第四十四条  救助管理机构应当区分受助未成年人年龄、文化程度、身体、精神状况和智力发展水平、滞留时间等不同情况，协助提供义务教育、替代教育等服务。
\n\n
第四十五条  救助管理机构应当主动联系当地人力资源和社会保障等部门，协助年满14周岁、不宜接受义务教育且有职业技能培训意愿的受助未成年人接受免费职业技能培训。
\n\n
第四十六条  受助未成年人在机构内接受教育培训的，救助管理机构应当制定适宜的教学计划，并对日常教学培训做好监督、检查工作。
\n\n
第四十七条  受助未成年人有严重不良行为的，救助管理机构可以依法送其到专门学校进行矫治和接受教育。
\n\n
第四十八条  受助未成年人暂时无法查明家庭情况或暂时无法离站的，救助管理机构可以为其办理家庭寄养、类家庭养育、机构托养等服务。安排具有意思表达能力的受助未成年人寄养托养的，应当征得其本人同意。办理寄养托养手续，应当符合相关标准要求。</string>
    <string name="people_gov_detail_c_4_1">第一节  离站准备
\n\n
第四十九条  救助管理机构应当根据受助人员需求，帮助其联系亲友，并为受助人员提取亲友汇款提供帮助。
\n\n
第五十条  对年满16周岁、无精神障碍或智力残疾迹象的受助人员，救助管理机构救助期限一般不超过10天。受助人员临时生活困难已经解决的，救助管理机构应当协助其做好离站前准备并适时安排离站。
\n\n
第五十一条  受助人员在医疗机构接受救治的，救助管理机构应当根据医疗机构出具的出院证明适时安排离站。
\n\n
第二节  自行离站
\n\n
第五十二条  年满16周岁、无精神障碍或智力残疾迹象的受助人员主动要求自行离站的，应当填写《自行离站声明书》（附件3）。救助管理机构应当为其办理离站手续，清点交接寄存物品，完成《在站服务及离站登记表》（附件4）。
\n\n
第五十三条  自行离站人员没有交通费的，救助管理机构应当根据其实际需求提供乘车凭证和必要的饮食。
\n\n
第五十四条  救助管理机构应当与当地（火）车站、港口协商购买、印制、查验及退返乘车凭证的具体方式，加强对受助人员乘车凭证的管理。
\n\n
乘车凭证应当方便受助人员到达目的地，流入地到流出地有直达车、船交通工具的，应当提供直达乘车凭证。确需中转的，应当告知受助人员中转地站名、中转地救助管理机构地址及联系方式。
\n\n
第五十五条  救助管理机构原则上不得为受助人员提供现金。因特殊情况需要提供短途公共交通费的，一般不超过20元，救助管理机构应当留存受助人员签收字据。
\n\n
第五十六条  受助人员未办理离站手续、擅自离开救助管理机构或医疗机构的，视为主动放弃救助，救助管理机构应当做好文字记录并保存相关资料。
\n\n
第三节  接送返回
\n\n
第五十七条  不满16周岁的未成年人、行动不便的残疾人和其他特殊困难受助人员（以下简称“特殊困难受助人员”），应当由其亲属接领返回。
\n\n
第五十八条  救助管理机构应当查验接领人身份证件，保留其身份证件复印件及有关证明材料，同时清点交接寄存物品，完成《在站服务及离站登记表》，办理交接手续。接领人拒不提供身份证件、证明材料或拒不签字确认的，不得移交受助人员。受助人员患病的，救助管理机构应当将受助人员病情信息告知接领人。
\n\n
第五十九条  亲属不能接领特殊困难受助人员返回的，救助管理机构应当在核实情况后安排接送返回。
\n\n
第六十条  流入地救助管理机构应当向流出地救助管理机构通报特殊困难受助人员人数、健康状况、家庭信息等基本情况，就接送方式、交接时间和地点等具体事项进行协商，并在交接时办理交接手续。
\n\n
第六十一条  由流入地救助管理机构乘坐公共交通工具护送特殊困难受助人员返回的，流出地救助管理机构应当安排车辆到（火）车站、码头等到达地点接应。
\n\n
第六十二条  流入地、流出地救助管理机构就接送事项不能达成一致意见的，应当报上级民政部门协调解决。
\n\n
第六十三条  救助管理机构应当根据接送特殊困难受助人员人数、健康状况、风险隐患等情况合理安排工作人员人数及交通方式，必要时应当安排医护人员随行。接送途中发生意外情况的，工作人员应当及时妥善处置并向救助管理机构报告。
\n\n
第六十四条  护送特殊困难受助人员返家前，流出地救助管理机构应当告知受助人员亲属做好接收准备，并在交接时办理交接手续。
\n\n
第六十五条  联系受助人员返家时，其家人明确表示不接收的，流出地救助管理机构应当提前联系当地乡镇政府（街道办事处）、公安机关和居（村）民委员会到场，请其依法维护返家人员权益。
\n\n
第六十六条  受助人员确已无家可归的，其户籍所在地的救助管理机构应当接收受助人员，并协调当地人民政府予以妥善安置。受助人员因长期流浪被注销户籍的，其户籍注销地的救助管理机构应当接收受助人员，并协调公安机关办理恢复户籍手续。
\n\n
第六十七条  省级民政部门应当加强对跨省接送返回工作的指导，根据各救助管理机构自身条件、地理位置等情况，确定跨省接送单位，及时更新、发布并上报本省具备跨省接送条件的救助管理机构名单。
\n\n
第四节  终止救助
\n\n
第六十八条  受助人员有以下情形之一的，救助管理机构可以终止救助：
\n\n
（一）无正当理由拒不离站或出院；
\n\n
（二）拒不提供或拒不如实提供家庭信息；
\n\n
（三）违法违纪、扰乱救助管理秩序；
\n\n
（四）其他不符合继续救助的情形。
\n\n
第六十九条  救助管理机构应当向受助人员解释终止救助的原因，清点交接寄存物品，完成《在站服务及离站登记表》，并向受助人员出具《终止救助通知书》（附件5，一式两份）。
\n\n
第五节  其他情形
\n\n
第七十条  经当地人民政府或民政部门批准，受助人员移送至有关机构长期安置的，救助管理机构应当清点交接寄存物品，完成《在站服务及离站登记表》，与相关机构办理交接手续。
\n\n
第七十一条  受助人员被司法机关带离的，救助管理机构应当查验司法机关工作人员身份证件或执法证件，保留司法机关出具的有关证明材料及工作人员身份证件或执法证件复印件，清点交接寄存物品，完成《在站服务及离站登记表》，办理交接手续。
\n\n
第七十二条  受助人员在医疗机构内死亡的，救助管理机构应当取得医疗机构出具的死亡证明书。受助人员在救助管理机构内因突发急病等原因经急救机构确认死亡的，救助管理机构应当及时报请公安机关到场处置并出具死亡原因鉴定书。
\n\n
第七十三条  救助管理机构应当协助死亡受助人员亲属处理好后事，清点交接寄存物品，完成《在站服务及离站登记表》。亲属不能前来的，应当取得其同意火化的书面证明材料或电话录音、视频录像等资料。亲属明确拒绝前来的，应当留存其电话录音、视频录像等资料，由救助管理机构妥善处理后事，办理火化手续，骨灰及相关物品留存三年。
\n\n
第七十四条  无法查明死亡受助人员身份或无法联系到其亲属的，救助管理机构应当在市级以上报刊上刊登公告，公告期30天（当地对无主尸体处置有规定的，依照当地规定处置）。公告期满后仍无人认领的，由救助管理机构妥善处理后事，办理火化手续，骨灰及相关物品留存三年。</string>
    <string name="people_gov_detail_c_5_1">第七十五条  救助管理机构应当严格遵守相关法律法规，建立健全内部管理制度，明确岗位职责，规范工作流程，完善绩效评价，实行规范化管理。
\n\n
第七十六条  救助管理机构应当建立岗位培训制度，工作人员应当经培训合格后上岗。工作人员上岗应当统一着装并佩戴工作标识。
\n\n
第七十七条  救助管理机构应当建立安全保卫制度，在接待大厅配备安全检查门或金属探测器等安全检查设备，在楼院门外、接待大厅、楼道、食堂等公共区域及观察室等特殊区域安装具有存储功能的视频监控系统。监控录像资料保存期不少于3个月，特殊、重要资料以实物方式交存档案室。
\n\n
第七十八条  救助管理机构应当建立值班巡查制度，值班人员应当熟知机构内受助人员情况，加强夜班巡查并做好巡查记录。值班人员应当在交接班时对患病、情绪异常等特殊受助人员重点交接。
\n\n
第七十九条  救助管理机构应当建立信息管理制度，配备必要的工作电脑及相关设备，通过全国救助管理信息系统及时办理入站、离站等手续，信息录入应当真实、完整。
\n\n
第八十条  救助管理机构应当建立财务管理制度，规范流浪乞讨人员救助资金支出标准、报销凭证及审批程序，健全内部控制流程。
\n\n
第八十一条  救助管理机构应当建立宣传、引导社会组织、社会公众、志愿者等社会力量参与救助服务的工作制度，委托具有相应从业资质的机构开展心理辅导、教育培训、监护评估、寄养托养等救助服务。
\n\n
第八十二条  救助管理机构应当建立消防安全制度，配备必要的消防设施，定期开展消防演练。
\n\n
第八十三条  救助管理机构应当建立突发事件处置制度，制订针对极端天气、自然灾害、群体性事件等突发事件的应急预案，发生突发事件时应当迅速启动预案，采取有效措施予以处置，并及时向上级民政部门报告。
\n\n
第八十四条  救助管理机构应当建立救助管理工作档案管理制度，做好纸质材料、电子文件的收集、整理和存档保管工作。
\n\n
第八十五条  救助管理机构应当依法落实工作人员休假制度，每年至少开展一次全面的身体检查，保障工作人员身心健康。</string>
    <string name="people_gov_detail_c_6_1">第八十六条  在极端天气或遭受自然灾害情况下，救助管理机构可以开设临时避寒、避暑或庇护场所，简化救助流程，为求助人员提供饭菜和住宿等基本服务。
\n\n
第八十七条  求助人员或受助人员扰乱救助管理机构正常工作秩序的，救助管理机构应当报请公安机关到场处置。
\n\n
第八十八条  没有设立救助管理机构的民政部门，可以参照本规程开展救助管理工作。
\n\n
第八十九条  本规程由民政部负责解释，自2014年8月1日起实施。《民政部关于印发《救助管理机构基本规范》和《流浪未成年人救助保护机构基本规范》的通知》（民发〔2006〕118号）自本规程实施之日起废止。</string>
</resources>