<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_marginTop="50dp"  >
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <TextView
            android:id="@+id/txtpage4_line1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp"
            android:text="@string/page4_l1" />

        <TextView
            android:id="@+id/txtpage4_line2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:layout_below="@+id/txtpage4_line1"
            android:text="@string/page4_l2" />

        <RelativeLayout
            android:id="@+id/rltheader"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_below="@+id/txtpage4_line2"
            android:background="@color/header" >

            <TextView
                android:id="@+id/txtpage4_line3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:text="@string/page4_l3"
                android:textStyle="bold"
                android:textColor="@color/White"
                android:layout_centerVertical="true"
                android:textSize="@dimen/textheader"
                />

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/ll_l4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/rltheader"
            android:paddingTop="10dp" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/icon_ok_black" />

            <TextView
                android:id="@+id/txtpage4_line4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="10dp"
                android:text="@string/page4_l4" />

        </LinearLayout>
        <LinearLayout
            android:id="@+id/ll_l5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/ll_l4"
            android:paddingTop="10dp" >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/icon_ok_black" />

            <TextView
                android:id="@+id/txtpage4_line5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="10dp"
                android:text="@string/page4_l5" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/ll_l6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/ll_l5"
            android:paddingTop="10dp" >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/icon_ok_black" />

            <TextView
                android:id="@+id/txtpage4_line6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="10dp"
                android:text="@string/page4_l6" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/ll_l7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/ll_l6"
            android:paddingTop="20dp" >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/icon_ok_black" />

            <TextView
                android:id="@+id/txtpage4_line7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="10dp"
                android:text="@string/page4_l7" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/ll_l8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/ll_l7"
            android:paddingTop="10dp" >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/icon_ok_black" />

            <TextView
                android:id="@+id/txtpage4_line8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="10dp"
                android:text="@string/page4_l8" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/ll_l9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/ll_l8"
            android:paddingTop="10dp" >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/icon_ok_black" />

            <TextView
                android:id="@+id/txtpage4_line9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="10dp"
                android:text="@string/page4_l9" />
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/rl_l6"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_below="@+id/ll_l9">
            <Button
                android:id="@+id/btnpag3_1"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/page3_button1"
                android:drawableLeft="@drawable/icon_zoom"
                android:drawablePadding="5dp"
                android:paddingLeft="20dp"
                android:stateListAnimator="@null"
                android:gravity="center_vertical|left"
                android:textColor="@color/White"
                android:layout_toLeftOf="@+id/btnpag3_2"
                android:background="@drawable/buttoncustom">
            </Button>
            <Button
                android:id="@+id/btnpag3_2"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/page3_button2"
                android:drawableLeft="@drawable/icon_share"
                android:background="@drawable/buttoncustom"
                android:layout_centerHorizontal="true"
                android:stateListAnimator="@null"
                android:textColor="@color/White"
                android:drawablePadding="5dp"
                android:paddingLeft="20dp"
                android:gravity="center_vertical|left"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_centerVertical="true" >
            </Button>
            <Button
                android:id="@+id/btnpag3_3"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/page3_button3"
                android:drawableLeft="@drawable/icon_next"
                android:stateListAnimator="@null"
                android:paddingLeft="20dp"
                android:textColor="@color/White"
                android:drawablePadding="5dp"
                android:gravity="center_vertical|left"
                android:layout_toRightOf="@+id/btnpag3_2"
                android:background="@drawable/buttoncustom">
            </Button>
        </RelativeLayout>
        <Button
            android:id="@+id/btnNext"
            android:layout_below="@+id/rl_l6"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="10dp"
            android:stateListAnimator="@null"
            android:layout_centerHorizontal="true"
            android:background="@drawable/buttoncustom"
            android:textColor="@color/White"
            android:text="@string/page3_button4" />

    </RelativeLayout>
</ScrollView>
